# paradoxGameConverters

./: .gitattributes  .gitignore  .gtattributes  .hgignore  .travis.yml  5mrrlwuh.xji.txt  CK2ToEU3.sln  CK2ToEU3.vcxproj  CK2ToEU3.vcxproj.filters  Converter problems.txt  CopyUIFiles.bat  Copy_Debug_Files.bat  Copy_Files.bat  EU4ToV2.vcxproj  EU4ToV2.vcxproj.filters  LICENSE  README.md  Vic2 Province Checker.ods  build.bat  build_EU4ToVic2_release.bat  build_EU4ToVic2_release.sh  build_Vic2ToHoI3_release.bat  build_Vic2ToHoI4_release.bat  build_Vic2ToHoI4_release.sh  build_provinceMapper.bat  configuration.txt  test.bat  test_all_configs.bat  test_all_saves.bat
CK2ToEU3/: CK2ToEU3-VS2013.sln  CK2ToEU3-VS2013.vcxproj  CK2ToEU3.vcxproj  CMakeLists.txt  Copy_Files.bat  build-VS2013.bat  build_to_archive.bat  test.bat  test_all_configs.bat  test_all_saves.bat
CK2ToEU3/CK2Plus to EU3/: country_mappings.txt  culture_mappings.txt  province_mappings.txt  religion_mappings.txt
CK2ToEU3/Converter Mod/: country_mappings_mod.txt  culture_mappings_mod.txt  religion_mappings_mod.txt
CK2ToEU3/Converter Mod/mod/: Converter.mod
CK2ToEU3/Data Files/: blocked_nations.txt  country_mappings.txt  culture_mappings.txt  landed_title_migrations.txt  province_mappings.txt  religion_mappings.txt
CK2ToEU3/Source/: CMakeLists.txt  Configuration.cpp  Configuration.h  Convert.cpp  Date.cpp  Date.h  Log.cpp  Log.h  LogBase.h  Mappers.h  Temp.cpp  Temp.h  mappers.cpp
CK2ToEU3/Source/CK2World/: CK2Army.cpp  CK2Army.h  CK2Barony.cpp  CK2Barony.h  CK2Building.cpp  CK2Building.h  CK2Character.h  CK2Dynasty.cpp  CK2Dynasty.h  CK2History.h  CK2Opinion.h  CK2Province.cpp  CK2Province.h  CK2Religion.cpp  CK2Religion.h  CK2Techs.h  CK2Title.cpp  CK2Title.h  CK2Trait.cpp  CK2Trait.h  CK2Version.cpp  CK2War.cpp  CK2World.cpp  CK2World.h  Ck2History.cpp
CK2ToEU3/Source/Common/: Constants.h  Date.cpp  Date.h
CK2ToEU3/Source/EU3World/: EU3Advisor.cpp  EU3Advisor.h  EU3Army.cpp  EU3Army.h  EU3Country.cpp  EU3Country.h  EU3Diplomacy.cpp  EU3Diplomacy.h  EU3History.cpp  EU3History.h  EU3Navy.cpp  EU3Navy.h  EU3Province.cpp  EU3Province.h  EU3Ruler.cpp  EU3Ruler.h  EU3Tech.cpp  EU3Tech.h  EU3World.cpp  EU3World.h
CK2ToEU3/Source/ModWorld/: ModCultureRule.cpp  ModCultureRule.h
CK2ToEU3/Source/Parsers/: IObject.cpp  IObject.h  LandedTitleMigrationsParser.cpp  LandedTitleMigrationsParser.h  Object.cpp  Object.h  Parser.cpp  Parser.h
CK2ToEU3/Test/: CMakeLists.txt  ConvertTests.cpp
CK2ToEU3/Test/CK2World/: CK2HistoryTests.cpp  CK2TitleTests.cpp  CK2WorldTests.cpp
CK2ToEU3/Test/Common/: DateTests.cpp
CK2ToEU3/Test/EU3World/: EU3CountryTests.cpp
CK2ToEU3/Test/Helpers/: ObjectDataHelper.h  SaveDataHelper.h
CK2ToEU3/Test/Mocks/: LoggerMock.h  ObjectMock.h
CK2ToEU3/Test/Parsers/: LandedTitleMigrationsParserTests.cpp  ParserTests.cpp
CK2ToEU3/TestConfigurations/Mod/: configuration.txt
CK2ToEU3/TestConfigurations/Vanilla/: configuration.txt
CK2ToEU3/UI/: App.xaml.cs  Configuration.xml  MainWindow.xaml.cs
EU4toV2/: CMakeLists.txt  Copy_Debug_Files.bat  Copy_Files.bat  Copy_Files.sh  EU4ToV2-VS2013.sdf.REMOVED.git-id  EU4ToV2-VS2013.sln  EU4ToV2-VS2013.vcxproj  EU4ToV2-VS2013.vcxproj.filters  EU4ToV2.sln  EU4ToV2.vcxproj  EU4ToV2.vcxproj.filters  EU4toV2Converter.pdb.REMOVED.git-id  UpgradeLog.htm  area.txt  build-VS2013.bat  build.bat  build_and_test.bat  configuration.txt  cultureMap.txt  port_blacklist.txt  test.bat  test_all_configs.bat  test_all_saves.bat
EU4toV2/CK2 Conversion Mod File (temp)/: religionMap.txt
EU4toV2/Data_Files/: Changelog.txt  Colonial.txt  Eu4ToVic2DefaultConfiguration.xml  FAQ.txt  ReadMe.txt  SupportedConvertersDefault.xml  V2_province_reference.txt  after_converting.txt  blocked_tech_schools.txt  building_mappings.txt  ck2titleMap.txt  colonial_flags.txt  colonial_tags.txt  configuration.txt  converterEvents.txt  countries.txt  countries.txt.orig  country_colors.txt  country_mappings.txt  cultureMap.txt  cultures.txt  governmentMapping.txt  idea_effects.txt  leader_traits.txt  license.txt  merge_nations.txt  minorityPops.txt  output.mod  port_blacklist.txt  port_whitelist.txt  province_mappings.txt  regiment_costs.txt  religion.txt  religionMap.txt  slaveCultureMap.txt  starting_factories.txt  unions.txt  vanilla_province_mappings.txt
EU4toV2/Source/: Color.cpp  Color.h  Configuration.cpp  Configuration.h  CountryMapping.cpp  CountryMapping.h  Date.cpp  Date.h  EU4Army.cpp  EU4Army.h  EU4Country.cpp  EU4Country.h  EU4Diplomacy.cpp  EU4Diplomacy.h  EU4Leader.cpp  EU4Loan.cpp  EU4Loan.h  EU4Province.cpp  EU4Province.h  EU4Relations.cpp  EU4Relations.h  EU4toV2Converter.cpp  FlagUtils.cpp  FlagUtils.h  Log.cpp  Log.h  Mapper.cpp  Mapper.h  V2Army.cpp  V2Army.h  V2Country.cpp  V2Country.h  V2Diplomacy.cpp  V2Factory.cpp  V2Leader.cpp  V2Leader.h  V2Party.h  V2Province.h  V2Reforms.cpp  V2Reforms.h  (+10 more)
Vic2ToHoI4/: CMakeLists.txt  Copy_Files.bat  Copy_Files.sh  Copy_Files_debug.bat  Vic2ToHoI4.sln  Vic2ToHoI4.vcxproj  Vic2ToHoI4.vcxproj.filters  build.bat  test.bat  test_all_saves.bat
Vic2ToHoI4/Data_Files/: FAQ.txt  HPM_province_mappings.txt  ReadMe.txt  Resources.txt  SSU_communist.tga  SSU_fascist.tga  SSU_monarchy.tga  SSU_republic.tga  SUA_communist.tga  SUA_fascist.tga  SUA_monarchy.tga  SUA_republic.tga  SupportedConvertersDefault.xml  TIG.tga  TIG_republic.tga  TOG_communist.tga  TOG_monarchy.tga  TOG_republic.tga  TOO_communist.tga  TOO_fascist.tga  TOO_monarchy.tga  TOO_republic.tga  TOU.tga  TOU_fascist.tga  TOU_monarchy.tga  TOU_republic.tga  TRZ_communist.tga  TRZ_fascist.tga  TRZ_monarchy.tga  TRZ_republic.tga  Vic2toHoI4DefaultConfiguration.xml  WRI.tga  WRI_communist.tga  WRI_fascist.tga  WRI_republic.tga  WSH.tga  WSH_communist.tga  WSH_fascist.tga  XHO_communist.tga  XHO_fascist.tga  (+39 more)
Vic2ToHoI4/Source/: Color.cpp  Color.h  Configuration.cpp  Configuration.h  CountryMapping.cpp  CountryMapping.h  Flags.cpp  Flags.h  GovernmentMapper.cpp  GovernmentMapper.h  Mapper.cpp  Mapper.h  V2toHOI4Converter.cpp  WinUtils.cpp  WinUtils.h  targa.cpp
(+24096 files in other folders)
