cmake_minimum_required(VERSION 3.8)
#set(CMAKE_VERBOSE_MAKEFILE on)

project(Vic2ToHoI4)
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/Source)
set(PROJECT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/Source)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Release-Linux)
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Release-Linux)

add_compile_options("-std=c++11")
#add_compile_options("-lboost_system")
#add_compile_options("-lboost_filesystem")

include_directories("../common_items")
include_directories("${PROJECT_SOURCE_DIR}")

file(GLOB MAIN_SOURCES "${PROJECT_SOURCE_DIR}/*.cpp")
file(GLOB HOI4WORLD_SOURCES "${PROJECT_SOURCE_DIR}/HOI4World/*.cpp")
file(GLOB MAPPER_SOURCES "${PROJECT_SOURCE_DIR}/Mappers/*.cpp")
file(GLOB VIC2WORLD_SOURCES "${PROJECT_SOURCE_DIR}/V2World/*.cpp")
set(COMMON_SOURCES "../common_items/CardinalToOrdinal.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/CommonUtils.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/Date.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/LinuxUtils.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/Log.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/Object.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/ParadoxParser8859_15.cpp")
set(COMMON_SOURCES ${COMMON_SOURCES} "../common_items/ParadoxParserUTF8.cpp")

set(Boost_USE_STATIC_LIBS        ON) # only find static libs
set(Boost_USE_MULTITHREADED      ON)
set(Boost_USE_STATIC_RUNTIME    OFF)
find_package(Boost COMPONENTS filesystem system)
#find_package(Boost COMPONENTS date_time filesystem system ...)
if(Boost_FOUND)
  add_executable(Vic2ToHoi4Converter ${MAIN_SOURCES} ${HOI4WORLD_SOURCES} ${MAPPER_SOURCES} ${VIC2WORLD_SOURCES} ${COMMON_SOURCES})
  #target_link_libraries(Vic2ToHoi4Converter "/mnt/d/boost/boost_1_60_0/stage/lib/")
  #target_link_libraries(Vic2ToHoi4Converter "/mnt/d/boost/boost_1_60_0/stage/lib/libboost_system-vc140-mt-1_60.lib")
  #target_link_libraries(Vic2ToHoi4Converter "/mnt/d/boost/boost_1_60_0/stage/lib/libboost_system-vc140-mt-gd-1_60.lib")
endif()